--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,13 @@
 {
-	"name": "lpyth-client",
-	"description": "VSCode part of a language server",
-	"author": "Microsoft Corporation",
+	"name": "lfortran-lsp-client",
+	"description": "LFortran LSP client.",
+	"author": "LCompilers",
 	"license": "MIT",
-	"version": "0.0.1",
-	"publisher": "vscode",
+	"version": "1.0.0",
+  "publisher": "LCompilers",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/dylon/lfortran-lsp"
 	},
 	"engines": {
 		"vscode": "^1.63.0"
